--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
             <h3>Trending Today</h3>
               <div class="trending">
                 <div class="items">
-                  <img src="./images/balletflats.png">
+                  <img src="balletflats.png">
                   <p id="description">Cute Ballet Flats for women.</p>
                   <p id="price">$10000.00</p>
                   <a href="">Learn more</a>
                 </div>
                 <div class="items">
-                  <img src="./images/flat.png">
+                  <img src="flat.png">
                   <p id="description">Shoes for women.</p>
                   <p id="price">$1275.00</p>
                   <a href="">Learn more</a>
                 </div>
                 <div class="items">
-                  <img src="./images/runningshoes.png">
+                  <img src="runningshoes.png">
                   <p id="description">Running shoes catered for your comfort</p>
                   <p id="price">$1234.00</p>
                   <a href="">Learn more</a>
                 </div>
                 <div class="items">
-                  <img src="./images/wedges.png">
+                  <img src="wedges.png">
                   <p id="description">Black heels</p>
                   <p price="price">$2300.00</p>
                   <a href="">Learn more</a>
